--- a/views/index.html
+++ b/views/index.html
@@ -52,7 +52,7 @@
             <div>
               <ol class="nav nav-pills nav-stacked nav-side">
                 <li class="active"><a href="#">Day 1: A Site a Day</a></li>
-                <li><a href="#">Day 2: Product Landing Page</a></li>
+                <li><a href="/clock">Day 2: Color Clock</a></li>
               </ol>
             </div>
           </div>
