--- a/views/index.html
+++ b/views/index.html
@@ -48,7 +48,7 @@
 
         <div class="row">
           
-          <div class="col-lg-3">
+          <div class="col-lg-2">
             <div>
               <ol class="nav nav-pills nav-stacked nav-side">
                 <li class="active"><a href="#">Day 1: A Site a Day</a></li>
@@ -57,7 +57,16 @@
             </div>
           </div>
 
-          <div class="col-lg-9">
+          <div class="col-lg-10">
+            <div class="post">
+              <h3 class="title"><span>Color Clock</span></h3>
+              <div class="content">
+                <p>
+                  For day two...
+                </p>
+              </div>
+            </div>
+
             <div class="post">
               <h3 class="title"><span>A Site a Day</span></h3>
               <div class="content">
