--- a/views/analogclock.html
+++ b/views/analogclock.html
@@ -3,9 +3,9 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-        <script type="text/javascript" src="js/color_clock.js"></script>
+        <script src="js/analogclock.js" type="text/javascript"></script>
         <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
-        <link href="css/color_clock.css" rel="stylesheet">
+        <link href="css/analogclock.css" rel="stylesheet">
         <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,900' rel='stylesheet' type='text/css'>
     </head>
     <body>
@@ -15,17 +15,13 @@
                 <div class="github">
                 <a href="http://github.com/mlp5ab/siteaday" data-title="View on GitHub"><img src="img/icon-github.png" alt="GitHub"></a>
                 </div>
-                <div class="row">
-                    <div class="col-lg-12">
-                        <h1 id="time_title">The current time is</h1>
-                        <div id="clock" ></div>
-                        <h2 id="color_title">The color of now is</h2>
-                        <div id="color"></div>            
-                    </div>
-                </div>
+                <ul id="clock">
+                    <li id="sec"></li>
+                    <li id="hour"></li>
+                    <li id="min"></li>
+                </ul>
+                <div id="time"></div>
             </div>
         </div>
     </body>
-
-    
 </html>
