Analog Clock update

--- a/views/index.html
+++ b/views/index.html
@@ -53,6 +53,7 @@
               <ol class="nav nav-pills nav-stacked nav-side">
                 <li class="active"><a href="#">Day 1: A Site a Day</a></li>
                 <li><a href="/clock">Day 2: Color Clock</a></li>
+                <li><a href="/analog">Day 3: Analog Clock</a></li>
               </ol>
             </div>
           </div>
