--- a/views/index.html
+++ b/views/index.html
@@ -60,11 +60,22 @@
 
           <div class="col-lg-10">
             <div class="post">
+              <h3 class="title"><span>Analog Clock</span></h3>
+              <div class="content">
+                <p>
+                  Day 3...
+                </p>
+              </div>
+            </div>
+
+            <div class="post">
               <h3 class="title"><span>Color Clock</span></h3>
               <div class="content">
                 <p>
-                  For day two...
-                </p>
+                  For day two I actually got the idea from another site I had seen and thought it would be a great opportunity to get my feet wet. The whole idea is that we can convert the current time into a 6 byte hexidecimal representation for a color thus creating the color of now. The only interesting part of the code is that setInterval() function which allows you to schedule funciton calls on a rolling basis. This allows us to update the current time and convert that time into a color which automatically becomes the background.
+                </p><br>
+                <p>
+                  Additionally, I am looking into options for a persistent datastore. I am intrigued with the noSQL stores such as redis, mongoDB, and couchDB which seem to be all the rage these days. After some research, I decided that I am going to give mongoDB a shot and began to implement that login into the node application today. My goals for the immediate future are to set up a simple datastore to hold these blog posts but it may also allow me some more flexibility in the types of pages I will create going forward. I am still brainstorming for what will come tomorrow so check in soon.</p>
               </div>
             </div>
 
