--- a/views/index.html
+++ b/views/index.html
@@ -53,12 +53,22 @@
               <ol class="nav nav-pills nav-stacked nav-side">
                 <li class="active"><a href="#">Day 1: A Site a Day</a></li>
                 <li><a href="/clock">Day 2: Color Clock</a></li>
-                <li><a href="/analog">Day 3: Analog Clock</a></li>
+                <li><a href="/analog">Day 3: Space Clock</a></li>
+                <li><a href="/dragndrop">Day 4: Drag 'n Drop</a></li>
               </ol>
             </div>
           </div>
 
           <div class="col-lg-10">
+            <div class="post">
+              <h3 class="title"><span>Analog Clock</span></h3>
+              <div class="content">
+                <p>
+                  On Day 4 I chose to look into the html5 drag and drop api (or dnd api as I learned it is called). More coming soon.
+                </p>
+              </div>
+            </div>
+
             <div class="post">
               <h3 class="title"><span>Analog Clock</span></h3>
               <div class="content">
