--- a/views/index.html
+++ b/views/index.html
@@ -61,7 +61,7 @@
 
           <div class="col-lg-10">
             <div class="post">
-              <h3 class="title"><span>Analog Clock</span></h3>
+              <h3 class="title"><span>Drag 'n Drop</span></h3>
               <div class="content">
                 <p>
                   On Day 4 I chose to look into the html5 drag and drop api (or dnd api as I learned it is called). More coming soon.
@@ -70,7 +70,7 @@
             </div>
 
             <div class="post">
-              <h3 class="title"><span>Analog Clock</span></h3>
+              <h3 class="title"><span>Space Clock</span></h3>
               <div class="content">
                 <p>
                   Day 3...
