--- a/views/index.html
+++ b/views/index.html
@@ -7,105 +7,89 @@
     <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link href="css/siteaday.css" rel="stylesheet" media="screen">
     <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,900' rel='stylesheet' type='text/css'>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js" type="text/javascript"></script>
+    <script src="app.js" type="text/javascript"></script>
+    <script src="maincontroller.js" type="text/javascript"></script>
   </head>
   <body>
 
     <!-- BEGIN PAGE -->
-    <div class="page" ng-app='ASiteADay' ng-controller='MainController'>
+    <div class="page" ng-app='SiteADay' ng-controller='MainController'>
       
-      <!-- HEADER BEGIN -->
-      <header>
-        <div class="header-primary">
-          <div class="container">
-            <div class="row">
-              <div class="col-lg-12">
-                <h1 class="col-lg-10 col-8 text-white">A site a day</h1>  
-                <div class="col-lg-2 col-4 pull-right">
-                  <a href="http://github.com/mlp5ab/siteaday" data-title="View on GitHub" class="github pull-right"><img src="img/icon-github.png" alt="GitHub"></a>
-                </div>
-              </div>
+        
+        <!-- Side Bar -->
+        <div class="col-lg-4 col-sm-4 sidebar">
+          <div class="sidebar-content">
+          <div><h1 class="name">Michael Paris</h1></div>
+            <div class="quote">
+              <blockquote>
+                <p class="lead">"We are what we repeatedly do. Excellence, therefore, is not an act but a habit."</p>
+                <p class="lead">-Aristotle</p>
+              </blockquote>
             </div>
-            <div class="row">
-              <div class="col-lg-12">
-                <h3 class="text-white">I've decided to become a better web developer. This is how I'm doing it.</h3>  
-              </div>
+            <div class="projects-header"><h2>Projects</h2></div>
+            <ul>
+              <li class="project"><a href="">Home</a></li>
+              <li class="project"><a href="/clock">Color Clock</a></li>
+              <li class="project"><a href="/analog">Space Clock</a></li>
+              <li class="project"><a href="/dragndrop">Drag 'n Drop</a></li>
+            </ul>
             </div>
-          </div>
         </div>
-      </header>
-      <!-- HEADER END -->
+        
+        <!-- Div Block to make room for the fixed block above -->
+        <div class="col-lg-4 col-sm-4"></div>
 
-      <!-- CONTENT BEGIN -->
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12">
-            <blockquote class="text-center">
-              <p class="lead">We are what we repeatedly do. Excellence, therefore, is not an act but a habit.</p>
-              <p class="lead">-Aristotle</p>
-            </blockquote>
-          </div>
-        </div>
 
-        <div class="row">
-          
-          <div class="col-lg-2">
-            <div>
-              <ol class="nav nav-pills nav-stacked nav-side">
-                <li class="active"><a href="#">Day 1: A Site a Day</a></li>
-                <li><a href="/clock">Day 2: Color Clock</a></li>
-                <li><a href="/analog">Day 3: Space Clock</a></li>
-                <li><a href="/dragndrop">Day 4: Drag 'n Drop</a></li>
-              </ol>
+        <!-- Body -->
+        <div class="col-lg-8 col-sm-8 posts">
+          <div class="post">
+            <h3 class="post-title">Drag 'n Drop</h3>
+            <div class="post-body">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
             </div>
           </div>
 
-          <div class="col-lg-10">
-            <div class="post">
-              <h3 class="title"><span>Drag 'n Drop</span></h3>
-              <div class="content">
-                <p>
-                  On Day 4 I chose to look into the html5 drag and drop api (or dnd api as I learned it is called). More coming soon.
-                </p>
-              </div>
-            </div>
-
-            <div class="post">
-              <h3 class="title"><span>Space Clock</span></h3>
-              <div class="content">
+          <div class="post">
+            <h3 class="post-title">Space Clock</h3>
+            <div class="post-body">
                 <p>
                   Day 3...
                 </p>
-              </div>
             </div>
+          </div>
 
-            <div class="post">
-              <h3 class="title"><span>Color Clock</span></h3>
-              <div class="content">
+          <div class="post">
+            <h3 class="post-title">Color Clock</h3>
+            <div class="post-body">
                 <p>
                   For day two I actually got the idea from another site I had seen and thought it would be a great opportunity to get my feet wet. The whole idea is that we can convert the current time into a 6 byte hexidecimal representation for a color thus creating the color of now. The only interesting part of the code is that setInterval() function which allows you to schedule funciton calls on a rolling basis. This allows us to update the current time and convert that time into a color which automatically becomes the background.
                 </p><br>
                 <p>
                   Additionally, I am looking into options for a persistent datastore. I am intrigued with the noSQL stores such as redis, mongoDB, and couchDB which seem to be all the rage these days. After some research, I decided that I am going to give mongoDB a shot and began to implement that logic into the node application today. My goals for the immediate future are to set up a simple datastore to hold these blog posts but it may also allow me some more flexibility in the types of pages I will create going forward. I am still brainstorming for what will come tomorrow so check in soon.</p>
-              </div>
             </div>
+          </div>
 
-            <div class="post">
-              <h3 class="title"><span>A Site a Day</span></h3>
-              <div class="content">
+          <div class="post">
+            <h3 class="post-title">A Site a Day</h3>
+            <div class="post-body">
                 <p>
                   It is time. It is time that I stop having a "good enough" relationship with html, css, and javascript and start becoming a designer for the web. Why? I have spent the last 3 months working on backend solutions for a company that specializes in creating mobile applications. As a result, I have become increasingly proficient with backend technologies but rarely get to touch the front end code because that is handled, naturally, by the native client teams. My vision for this project and the ones which follow is to improve my skill in web design, as well as to document my journey along the way. I have 28 days before school starts back up, and 28 websites to create before then. Let's get started.  
                 </p>
-              </div>
             </div>
-          </div>  
+          </div>
+        
 
-          
-
-          
-        </div>
       </div>
+
     </div>
-    <!-- END PAGE -->
+
+      
 
 
 
