--- a/public/css/analogclock.css
+++ b/public/css/analogclock.css
@@ -1,8 +1,12 @@
 html, body {
-    background: linear-gradient(to bottom, black, #333,#444, #555,#002851);
+    background: -webkit-gradient(linear, 0 100%, 0 0, from(black), color-stop(0.25, #333), color-stop(0.5, #444), color-stop(0.75, #555), to(#002851));
+    background: -webkit-linear-gradient(black, #333, #444, #555, #002851);
+    background: -moz-linear-gradient(black, #333, #444, #555, #002851);
+    background: -o-linear-gradient(black, #333, #444, #555, #002851);
+    background: linear-gradient(black, #333, #444, #555, #002851);
     /*background-color: #000;*/
     height: 100%;
-    width: 100%
+    width: 100%;
 }
 #clock {
     position: relative;
