--- a/public/css/siteaday.css
+++ b/public/css/siteaday.css
@@ -20,7 +20,12 @@ html, body {
     color: #F65555;
     font-family: 'Source Sans Pro', sans-serif;
     box-shadow: 1px 1px 5px #555;
-    background-image: url('../img/paris2.png');
+    background: url('../img/paris_lg.png') no-repeat;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+
 }
 
 .sidebar-content {
@@ -72,7 +77,7 @@ ul {
         font-size: 4em;
     }
     .sidebar {
-    background-image: url('../img/paris.png');
+    background-image: url('../img/paris_sm.png');
     height: 700px;
     position: static;
     } 
