--- a/public/views/music/create.html
+++ b/public/views/music/create.html
@@ -16,7 +16,7 @@
     <div class="song">
       <h2 class="song-title">{{ title }}</h2>
       <div class="song-content">
-        <iframe width="854" height="510" src="{{ url }}&origin=http://michaelparis.us" frameborder="0" allowfullscreen></iframe>
+        <iframe width="854" height="510" src="{{ url }}" frameborder="0" allowfullscreen></iframe>
         <p class="lead">{{ description }}</p>
       </div>
     </div>
