--- a/public/views/articles/view.html
+++ b/public/views/articles/view.html
@@ -4,10 +4,8 @@
   <!-- One article -->
   <div class="articles">
     <div class="article">
-      <h2 class="article-title">{{ article.title }}</h2>
-      <div class="article-content">
-        {{ article.content }}
-      </div>
+      <h2 class="article-title" ng-bind-html="article.title"></h2>
+      <div class="article-content" ng-bind-html="article.content"></div>
       <p class="date">{{article.created | date:'mediumDate'}}</p>
     </div>
   </div>
