--- a/public/views/sketches/list.html
+++ b/public/views/sketches/list.html
@@ -6,11 +6,13 @@
     <div class="sketch-content">
       <!-- <iframe width="854" height="510" src="{{ sketch.url }}" frameborder="0" allowfullscreen></iframe> -->
       <div class="sketch-wrapper">
-        <img title="{{ sketch.title }}" src="{{ sketch.url }}">
+        <a href="/#/sketches/{{sketch._id}}"><img title="{{ sketch.title }}" src="{{ sketch.url }}"></a>
       </div>
     </div>
-    <span class="date">{{ sketch.created | date:mediumDate }}</span>
-    <a href="/#/sketches/{{ sketch._id }}/edit" ng-show="isAuthenticated">Edit</a>
+    <div class="sketch-footer">
+      <span class="date">{{ sketch.created | date:mediumDate }}</span>
+      <a href="/#/sketches/{{ sketch._id }}/edit" ng-show="isAuthenticated">Edit</a>
+    </div>
     <br />
   </div>
 
