--- a/public/views/sketches/view.html
+++ b/public/views/sketches/view.html
@@ -5,7 +5,9 @@
     <div class="sketch">
       <h2 class="sketch-title">{{sketch.title}}</h2>
       <div class="sketch-content">
-      	<img title="{{ sketch.title }}" src="{{ sketch.url }}">
+      	<div class="sketch-wrapper">
+      		<img title="{{ sketch.title }}" src="{{ sketch.url }}">
+      	</div>
       </div>
       <div class="sketch-footer">
         <span class="date">{{ sketch.created | date:mediumDate }}</span>
