--- a/public/css/music.css
+++ b/public/css/music.css
@@ -16,7 +16,7 @@
 }
 
 .song {
-	margin: 3% 10%;
+	margin: 3% 5%;
 	padding-top: 5px;
 	background-color: #fefefe;
 	border-radius: 10px;
@@ -24,19 +24,37 @@
 }
 
 .song-wrapper {
+	position: relative;
+	padding-bottom: 56.25%;
+	padding-top: 30px;
+	height: 0;
+	overflow: hidden;
+}
+
+.song-wrapper iframe,
+.song-wrapper object,
+.song-wrapper embed {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+
+/*.song-wrapper {
 	max-width: 90%;
 	height: auto;
 	position: relative;
 	display: block;
 	margin: 0 auto;
-}
+}*/
 
-.song-wrapper iframe {
+/*.song-wrapper iframe {
 	width: 100%;
-	/*height: 100%;*/
-	/*height: auto;*/
+	height: 100%;
+	/*height: auto;
 	display: block;
-}
+}*/
 
 .song-title, .song-content {
 	text-align: center;
