Responsive Text Size

--- a/public/css/music.css
+++ b/public/css/music.css
@@ -57,5 +57,11 @@
 }*/
 
 .song-title, .song-content {
+	font-size: 3vw;
 	text-align: center;
+}
+
+.music-footer {
+	/* Responsive Font size that changes with viewport width */
+	font-size: 1.5vw;
 }
