--- a/public/css/app.css
+++ b/public/css/app.css
@@ -62,16 +62,16 @@ html, body {
     margin: 0;
 }
 
-.projects-header {
+.habits-header {
     font-size: 2.2em;
 }
 
-.project {
+.habit {
     font-size: 1.7em;
     /*font-weight: bold;*/
 }
 
-.project > a {
+.habit > a {
     color: #F65555;
 }
 
