--- a/public/css/app.css
+++ b/public/css/app.css
@@ -18,9 +18,13 @@ html, body {
     /*text-shadow: 1px 1px 4px #000;*/
 }
 
-.name-link, .name-link:hover {
+.name-link {
     text-decoration:none;
     color: #F65555;
+}
+
+.name-link:hover {
+    color:#F31010;
 }
 
 .text-white {
@@ -73,6 +77,10 @@ html, body {
 
 .habit > a {
     color: #F65555;
+}
+
+.findmes {
+    text-align: center;
 }
 
 ul {
